# ecommerce_oop

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/models/: __init__.py  base.py  category.py  data_loader.py  logging_mixin.py  product.py
src/utils/: validators.py
tests/: test_base_product.py
tests/integration/: test_category_product.py  test_data_loader.py
tests/unit/: test_category.py  test_product.py
