[project]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = [
    {name = "Rezilya Stolyarova",email = "rezilek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"

