[project]
name = "pythonproject4"
version = "0.1.0"
description = "E-commerce core OOP implementation"
authors = [
    {name = "Rezilya Stolyarova",email = "rezilek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "poetry-core (>=1.0.0)"
]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
